[gd_scene load_steps=2 format=3 uid="uid://victory_screen"]

[ext_resource type="Script" path="res://scenes/battle/ui/victory_screen.gd" id="1"]

[node name="VictoryScreen" type="CanvasLayer"]
layer = 50
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Backdrop" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.75)

[node name="Panel" type="PanelContainer" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -260.0
offset_right = 520.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Root/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Root/Panel/VBox"]
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Root/Panel/VBox"]
layout_mode = 2
text = "Gold +0"
horizontal_alignment = 1

[node name="Hint" type="Label" parent="Root/Panel/VBox"]
layout_mode = 2
text = "Choose one card to add to your collection:"
horizontal_alignment = 1

[node name="CardOptions" type="HBoxContainer" parent="Root/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="ContinueButton" type="Button" parent="Root/Panel/VBox"]
layout_mode = 2
text = "Continue"
disabled = true

